[workspace]
members = [
    "backend",
    "runner",
    "sparsesim",
    "stdlib",
    "pip",
]
resolver = "2"

[workspace.package]
authors = ["Microsoft"]
homepage = "https://github.com/qir-alliance/qir-runner"
repository = "https://github.com/qir-alliance/qir-runner"
edition = "2024"
license = "MIT"
version = "0.9.1"

[profile.release]
debug = 1

[workspace.dependencies]
bitvec = "1.0.0"
clap = { version = "4.5.7", features = [ "cargo" ] }
criterion = "0.5.1"
inkwell = { git = "https://github.com/TheDan64/inkwell", rev = "0f8d2d6c9061cfe80d3e83b75ea00f6df94ee562", default-features = false, features = ["llvm20-1"] }
ndarray = "0.15.4"
num-bigint = { version = "0.4.5", default-features = false }
num-complex = "0.4"
num-traits = "0.2.19"
pyo3 = "0.24"
rand = "0.8.5"
rustc-hash = "1.1.0"