[package]
name = "qir-backend"
version = "0.4.0"
authors = ["Microsoft"]
edition = "2021"
license = "MIT"

[dependencies]
qir-stdlib = { path = "../stdlib" }
quantum-sparse-sim = { path = "../sparsesim" }
rand = "0.8.5"
num-complex = "0.4"
num-bigint = { version = "0.4.3", default-features = false }
bitvec = "1.0.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "gates"
harness = false

[[bench]]
name = "grover"
harness = false

[lib]
crate-type = ["staticlib","rlib"]
bench = false
