[package]
name = "qir-backend"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
qir-stdlib = { path = "../stdlib" }
quantum-sparse-sim = { path = "../sparsesim" }
rand = { workspace = true }
num-complex = { workspace = true }
num-bigint = { workspace = true }
bitvec = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "gates"
harness = false

[[bench]]
name = "grover"
harness = false

[lib]
crate-type = ["staticlib","rlib"]
bench = false
