[workspace]

[package]
name = "llvm-build"
version = "0.1.0"
edition = "2021"

[dependencies.qirlib]
git = "https://github.com/qir-alliance/pyqir"
rev = "f0c78f67896d06c4a6e5cd870d52678533c39423"
default-features = false
features = []

[features]
default = []
llvm11-0 = ["qirlib/llvm11-0-no-llvm-linking", "qirlib/build-llvm"]
llvm12-0 = ["qirlib/llvm12-0-no-llvm-linking", "qirlib/build-llvm"]
llvm13-0 = ["qirlib/llvm13-0-no-llvm-linking", "qirlib/build-llvm"]
llvm14-0 = ["qirlib/llvm14-0-no-llvm-linking", "qirlib/build-llvm"]
