[workspace]

[package]
name = "llvm-build"
version = "0.1.0"
edition = "2021"

[dependencies.qirlib]
git = "https://github.com/qir-alliance/pyqir"
rev = "901209db734a6d561d6dec7f4478f68a9e19a728"
default-features = false
features = []

[features]
default = []
llvm18-1 = ["qirlib/llvm18-1-no-llvm-linking", "qirlib/build-llvm"]
llvm19-1 = ["qirlib/llvm19-1-no-llvm-linking", "qirlib/build-llvm"]
llvm20-1 = ["qirlib/llvm20-1-no-llvm-linking", "qirlib/build-llvm"]
