[workspace]

[package]
name = "llvm-build"
version = "0.1.0"
edition = "2021"

[dependencies.qirlib]
git = "https://github.com/qir-alliance/pyqir"
tag = "v0.12.3"
default-features = false
features = []

[features]
default = []
llvm18-1 = ["qirlib/llvm18-1-no-llvm-linking", "qirlib/build-llvm"]
llvm19-1 = ["qirlib/llvm19-1-no-llvm-linking", "qirlib/build-llvm"]
llvm20-1 = ["qirlib/llvm20-1-no-llvm-linking", "qirlib/build-llvm"]
