[package]
authors = ["Microsoft"]
name = "qirrunner"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "JIT compiles and executes programs written in QIR (Quantum Intermediate Representation)."
readme = "README.md"
homepage = "https://github.com/qir-alliance/qir-runner"
repository = "https://github.com/qir-alliance/qir-runner"

[dependencies]
runner = { path = "../runner" }

[target.'cfg(not(any(target_os = "windows")))'.dependencies]
pyo3 = { workspace = true, features = ["abi3-py38", "extension-module"] }

[target.'cfg(any(target_os = "windows"))'.dependencies]
pyo3 = { workspace = true, features = ["abi3-py38", "extension-module", "generate-import-lib"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "qirrunner._native"