[project]
name = "qirrunner"
version = "0.7.2"
requires-python = ">= 3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
test = ["pytest ~= 8.2.1"]

[build-system]
requires = ["maturin ~= 1.2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "qirrunner._native"

[project.scripts]
qir-runner = "qirrunner._native:main"
