[package]
name = "runner"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell"
rev = "0.4.0"
default-features = false
features = ["llvm14-0"]

[dependencies]
qir-stdlib = { path = "../stdlib" }
qir-backend = { path = "../backend" }
clap = { workspace = true }
msvc_spectre_libs = { workspace = true }

[[bin]]
name = "qir-runner"
path = "src/main.rs"
