[package]
name = "runner"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
qir-stdlib = { path = "../stdlib" }
qir-backend = { path = "../backend" }
clap = { workspace = true }
inkwell = { workspace = true }
msvc_spectre_libs = { workspace = true }

[[bin]]
name = "qir-runner"
path = "src/main.rs"
