[package]
name = "runner"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
qir-stdlib = { path = "../stdlib" }
qir-backend = { path = "../backend" }
clap = { workspace = true }
inkwell = { workspace = true }
msvc_spectre_libs = { workspace = true }
wasmtime = "29.0.1"
tempfile = "3.3"

[dependencies.qirlib]
git = "https://github.com/qir-alliance/pyqir"
branch = "iadavis/wasm-prototype"
default-features = false
features = ["external-llvm-linking", "llvm14-0"]

[[bin]]
name = "qir-runner"
path = "src/main.rs"
