[package]
name = "quantum-sparse-sim"
version = "0.5.0"
authors = ["Microsoft"]
edition = "2021"
license = "MIT"

[dependencies]
qir-stdlib = { path = "../stdlib", optional = true }
rand = "0.8.5"
rustc-hash = "1.1.0"
num-complex = "0.4"
num-traits = "0.2.16"
num-bigint = { version = "0.4.4", default-features = false }
ndarray = "0.15.4"

[features]
default = ["exp"]
exp = ["qir-stdlib"]
