[package]
name = "quantum-sparse-sim"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rand = { workspace = true }
rustc-hash = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
num-bigint = { workspace = true }
ndarray = { workspace = true }
