[package]
name = "qir-stdlib"
version = "0.6.0"
authors = ["Microsoft"]
edition = "2021"
license = "MIT"
links = "qir-stdlib"

[dependencies]
num-bigint = { version = "0.4.4", default-features = false }
rand = "0.8.5"

[build-dependencies]
llvm-tools = { version = "0.1.1", optional = true}

[lib]
crate-type = ["staticlib", "rlib"]

[features]
default = ["fail-support", "message-support"]
range-support = ["llvm-tools"]
# Enables a default implementation of __quantum__rt__fail that panics with the fail message.
fail-support = ["message-support"]
# Enables a default implementation of __quantum__rt__message that prints the mssage to stdout.
message-support = []
