[package]
name = "qir-stdlib"
version = "0.7.0"
authors = ["Microsoft"]
edition = "2021"
license = "MIT"
links = "qir-stdlib"

[dependencies]
num-bigint = { version = "0.4.5", default-features = false }
rand = "0.8.5"

[lib]
crate-type = ["staticlib", "rlib"]

[features]
default = ["fail-support", "message-support"]
# Enables a default implementation of __quantum__rt__fail that panics with the fail message.
fail-support = ["message-support"]
# Enables a default implementation of __quantum__rt__message that prints the mssage to stdout.
message-support = []
