[package]
name = "qir-stdlib"
links = "qir-stdlib"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
num-bigint = { workspace = true }
rand = { workspace = true }

[lib]
crate-type = ["staticlib", "rlib"]

[features]
default = ["fail-support", "message-support"]
# Enables a default implementation of __quantum__rt__fail that panics with the fail message.
fail-support = ["message-support"]
# Enables a default implementation of __quantum__rt__message that prints the mssage to stdout.
message-support = []
